# yt-media

./: .codacy.yml  .codeclimate.yml  .coveragerc  .gitignore  .pylintrc  .supervisord.conf  .travis.yml  Dockerfile  Makefile  README.rst  admin.py  app.py  docker-compose.yml  download.py  dump.sql  ext.py  gunicorn.py  models.py  monkeytype.sqlite3  mypy.ini  pub.py  pyproject.toml  pyrightconfig.json  schema.py  sub.py  type_info.json  utils.py  views.py
.pytype/: build.ninja
.pytype/imports/: 0681866638cf_.imports  auth.conftest.imports  auth.test_auth.imports  auth.test_models.imports  c105bfcd6e51_.imports  env.imports  initial_development_data.imports  smorest_sfs.app.imports  smorest_sfs.extensions.__init__.imports  smorest_sfs.extensions.api.__init__.imports  smorest_sfs.extensions.api.decorators.imports  smorest_sfs.extensions.flask.__init__.imports  smorest_sfs.extensions.jwt.__init__.imports  smorest_sfs.extensions.marshal.__init__.imports  smorest_sfs.extensions.marshal.bases.imports  smorest_sfs.extensions.marshal.fields.imports  smorest_sfs.extensions.marshal.ma.imports  smorest_sfs.extensions.sqla.__init__.imports  smorest_sfs.extensions.sqla.db_instance.imports  smorest_sfs.extensions.sqla.errors.imports  smorest_sfs.extensions.sqla.helpers.imports  smorest_sfs.extensions.sqla.mixin.imports  smorest_sfs.extensions.sqla.model.imports  smorest_sfs.extensions.sqla.softdelete.imports  smorest_sfs.extensions.sqla.surrogatepk.imports  smorest_sfs.extensions.storage.__init__.imports  smorest_sfs.extensions.storage.captcha.imports  smorest_sfs.factory.imports  smorest_sfs.modules.__init__.imports  smorest_sfs.modules.auth.__init__.imports  smorest_sfs.modules.auth.decorators.imports  smorest_sfs.modules.auth.helpers.imports  smorest_sfs.modules.auth.params.imports  smorest_sfs.modules.auth.resources.imports  (+57 more)
.vim/: coc-settings.json
config/: development.toml  production.toml  testing.toml
deploy/nginx/: flask.conf
migrations/: initial_data.py  initial_development_data.py
scripts/: initapp.sh
smorest_sfs/: app.py  errors.py  factory.py
tasks/: __init__.py
templates/: edit.html
tests/: conftest.py  test_create_app.py  test_smorest_sfs.py  utils.py
(+242 files in other folders)
