[tool.poetry]
name = "yt-media"
version = "0.1.0"
description = ""
authors = ["ssfdust <ssfdust@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"
sqlalchemy = "^1.3"
flask-admin = "^1.5"
flask-cors = "^3.0"
flask_sqlalchemy = "^2.3"
flask_login = "^0.4.1"
pymysql = "^0.9.3"
pillow = "^5.4"
flask-ckeditor = "^0.4.3"
marshmallow-sqlalchemy = "^0.16.1"
marshmallow = "=v3.0.0rc4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
