[tool.poetry]
name = "smorest-sfs"
version = "0.1.0"
description = ""
authors = ["ssfdust <ssfdust@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = { git = "https://github.com/pallets/flask.git" }
flask-smorest = "^0.18.4"
sqlalchemy-utils = "^0.36.1"
sqlalchemy = "^1.3.12"
flask-sqlalchemy = "^2.4.1"
marshmallow-sqlalchemy = "^0.21.0"
flask-login = "^0.4.1"
kombu = "^4.6.7"
toml = "^0.10.0"
flask-babel = "^0.12.2"
flask-mail = "^0.9.1"
flask-marshmallow = "^0.10.1"
psycopg2 = "^2.8.4"
loguru = "^0.4.1"
pyperclip = "^1.7.0"
tabulate = "^0.8.6"
sqlparse = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
invoke = "^1.4.0"
pdbpp = "^0.10.2"
freezegun = "^0.3.13"
pytest-cov = "^2.8.1"

[tool.coverage.run]
include = ["smorest_sfs"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
